# Kameleon

./: .gitignore  CMakeLists.txt  README  kameleon-plus-Config.h.in
ext/: FindCDF.cmake
ext/cdf/: CMakeLists.txt
ext/cdf/cdf38_0-dist/: CHANGES.txt  Makefile  Release.notes
ext/cdf/cdf38_0-dist/cdfjava/examples/: CreateCDF.java  ReadCDF.java  test.cdf  test1.cdf
ext/cdf/cdf38_0-dist/cdfjava/jni/: cdfNativeLibrary.c  cdfjava.h
ext/cdf/cdf38_0-dist/src/include/: cdfrev.h
ext/cdf/cdf38_0-dist/src/lib/: cdfmem.c  cdfmisc3.c  cdftt2000.c  epochu.c
ext/cdf/cdf38_0-dist/src/lib/zlib/: zconf.h
ext/cdf/cdf38_0-dist/src/tools/: cdfcvt.c  cdfdump.c  cdfstat1.c  cdfstats.c  cdfxp.c  cdfxp1.c  skt2cdf.c
src/ccmc/: Adapt3D.cpp  Adapt3D.h  Adapt3DInterpolator.cpp  Adapt3DInterpolator.h  Attribute.cpp  Attribute.h  BATSRUS.cpp  BATSRUS.h  BATSRUSInterpolator.cpp  CCMCTime.cpp  CCMCTime.h  CDFFileReader.cpp  CDFFileReader.h  CMakeLists.txt  Cell3D.h  ENLIL.cpp  ENLIL.h  ENLILInterpolator.cpp  ENLILInterpolator.h  Fieldline.cpp  FileReader.cpp  FileReader.h  GeneralFileReader.cpp  GeneralFileReader.h  HDF5FileReader.cpp  HDF5FileReader.h  Interpolator.cpp  Interpolator.h  Kameleon.cpp  Kameleon.h  KameleonInterpolator.cpp  KameleonInterpolator.h  KameleonInterpolator_compute_beta.cpp  KameleonInterpolator_compute_e.cpp  KameleonInterpolator_compute_edotj.cpp  KameleonInterpolator_compute_en.cpp  KameleonInterpolator_compute_etaj.cpp  KameleonInterpolator_compute_exb.cpp  KameleonInterpolator_compute_gradient.cpp  KameleonInterpolator_compute_jpar.cpp  (+43 more)
src/ccmc/wrappers/c/: Tracer_c.cpp
src/ccmc/wrappers/java/: CMakeLists.txt
